2000-11-16  H.J. Lu  <hjl@gnu.org>

	* gas/symver/symver0.d: Add 64bit support.
	* gas/symver/symver1.d: Likewise.

2000-11-16  H.J. Lu  <hjl@gnu.org>

	* gas/symver/symver.exp: Don't run symver4 nor symver5.

2000-11-13  H.J. Lu  <hjl@gnu.org>

	* gas/symver/symver.exp: New for symver test.
	* gas/symver/symver0.d: Likewise.
	* gas/symver/symver0.s: Likewise.
	* gas/symver/symver1.d: Likewise.
	* gas/symver/symver1.s: Likewise.
	* gas/symver/symver2.l: Likewise.
	* gas/symver/symver2.s: Likewise.
	* gas/symver/symver3.l: Likewise.
	* gas/symver/symver3.s: Likewise.
	* gas/symver/symver4.l: Likewise.
	* gas/symver/symver4.s: Likewise.
	* gas/symver/symver5.l: Likewise.
	* gas/symver/symver5.s: Likewise.
	* gas/symver/symver6.l: Likewise.
	* gas/symver/symver6.s: Likewise.

2000-11-11  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/macros/macros.exp: Mark strings test xfail for sh.

2000-10-24  Diego Novillo  <dnovillo@cygnus.com>

	* intel.s, intel.d: Add new tests for intel syntax.

2000-10-19  Alan Modra  <alan@linuxcare.com.au>

	* gas/elf/section0.s: Ensure section sizes are multiples of 16.
	* gas/elf/section1.s: Likewise.
	* gas/elf/section[01].d: Change to suit.

2000-10-18  H.J. Lu <hjl@gnu.org>

	* gas/i386/intel.d: Fix the support for 64bit BFD in the last
	change.

2000-10-15  Diego Novillo  <dnovillo@cygnus.com>

	* intel.s, intel.d: Add new tests for naked registers using intel
	syntax.

2000-09-29  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris/regprefix-err-1.s, gas/cris/rd-regprefix-1.s,
	gas/cris/rd-regprefix-1.d, gas/cris/rd-regprefix-1b.d,
	gas/cris/us-err-1.s, gas/cris/us-err-2.s, gas/cris/us-err-3.s: New.
	* gas/cris/cris.exp: Loop run_dump_test over files matching rd-*.d.

2000-09-28  Alan Modra  <alan@linuxcare.com.au>

	* gas/hppa/parse/parse.exp: Replace "hppa*w-*-*" with "hppa*64*-*-*"
	* gas/hppa/reloc/reloc.exp: Likewise.
	* gas/hppa/unsorted/unsorted.exp: Likewise.

	* gas/hppa/reloc/reduce.s: Modify .PARAM so we need an arg reloc.
