@@ -1,3 +1,8 @@
+2000-11-20  H.J. Lu  <hjl@gnu.org>
+
+	* gas/i386/intel.d: Add 3 "nop"s for the a.out assembler.
+	* gas/i386/intel.s: Likewise.
+
 2000-11-16  H.J. Lu  <hjl@gnu.org>
 
 	* gas/symver/symver0.d: Add 64bit support.
